<resources>
    <string name="app_name">TocaAquela</string>
    <string name="action_settings">Settings</string>
    <string name="email_perfil">Email</string>
    <string name="nome_perfil">nome_perfil</string>
    <string name="logout_google">Sair do Google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_evento">Eventos</string>
    <string name="title_minhas_musicas">Minhas Músicas</string>
    <string name="title_perfil">Perfil</string>
    <string name="id">id</string>
    <string name="shared_config">shared_config</string>
    <string name="nome_musica">Nome musica</string>
    <string name="autor_musica">Autor musica</string>
    <string name="genero_musica">Gênero musica</string>
    <string name="salvar_musica">Salvar Música</string>
    <string name="salvar_evento">Salvar Evento</string>
    <string name="hora_termino">Hora Termino</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="dia_evento">Dia Evento</string>
    <string name="local_evento">Local Evento</string>
    <string name="nome_autor">Nome Autor</string>
    <string name="botao_sou_musico">Sou Musico</string>
    <string name="nome_artista">Nome Artístico</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="botao_login_artista">Entrar</string>
    <string name="nome_artistico">Nome Artístico</string>
    <string name="senha_artista">Senha</string>
    <string name="confirma_senha">Confirma Senha</string>
    <string name="salvar_artista">Salvar Artista</string>
    <string name="cadastrar_artista_agora">Cadastre - se agora</string>
    <string name="TocaAquela">TocaAquela</string>
    <string name="facebook_app_id">230269664506173</string>
    <string name="action_sou_musico">Sou musico</string>
    <string name="action_avalia_artista">Avalia artista</string>
    <string name="action_sou_artista">Sou artista</string>
    <string name="action_sugestao_artista">Enviar Sugestão</string>
    <string name="envia_avaliacao"> Enviar avaliação</string>
    <string name="action_logout">Sair</string>


    <string name="fb_login_protocol_scheme"></string>

    <string name="app_id">$app_id_here</string>
    <string name="fbid">your fb id</string>


    <string-array name="genres">
        <item>Sertanejo</item>
        <item>Rock</item>
        <item>MPB</item>
        <item>POP</item>
        <item>Forró</item>
    </string-array>


</resources>
