<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guest_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vagner.tocaaquela.view.LoginArtistaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="10sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_email_login_artista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="10sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_senha_login_artista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />



    <Button
        android:layout_marginTop="80dp"
        android:id="@+id/button_login_artista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/round_btn_linear_green"
        android:text="@string/botao_login_artista"
        android:textStyle="bold"
        android:textColor="@color/colorBranco" />




    <TextView
        android:id="@+id/artista_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_artista_agora"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryText"
        android:layout_gravity="center"
        android:textSize="10sp"
        android:textStyle="bold" />


</LinearLayout>