<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guest_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vagner.tocaaquela.view.NovaMusicaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_musica"
        android:textAllCaps="true"
        android:textColor="@color/colorVermelho"
        android:textSize="10sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_nome_musica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/colorVermelho"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor_musica"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorVermelho"
        android:textSize="10sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_autor_musica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/colorVermelho"
        android:textSize="20sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero_musica"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorVermelho"
        android:textSize="10sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_genero_musica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/colorVermelho"
        android:textSize="20sp" />



    <Button
        android:layout_marginTop="80dp"
        android:id="@+id/button_save_musica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/round_btn_linear_green"
        android:text="@string/salvar_musica"
        android:textStyle="bold"
        android:textColor="@color/colorBranco" />

</LinearLayout>