<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/local_evento_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/dia_evento_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBranco"
            android:gravity="center"
            android:text="@string/dia_evento"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/hora_inicio_evento_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBranco"
        android:gravity="center"
        android:text="@string/hora_inicio"
        android:textColor="@color/colorPrimary"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/hora_termino_evento_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBranco"
        android:gravity="center"
        android:text="@string/hora_termino"
        android:textColor="@color/colorPrimary"
        android:textSize="11sp" />

</LinearLayout>


    </LinearLayout>



</LinearLayout>

