<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragment.PerfilFragment">


    <LinearLayout
        android:id="@+id/section_perfil"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagem_perfil"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/email_perfil"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nome_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/nome_perfil"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botao_logout_google"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/logout_google"
                android:textColor="@color/colorBranco"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botao_sou_musico"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_btn_linear_green"
                android:text="@string/botao_sou_musico"
                android:textColor="@color/colorBranco"
                android:textSize="10dp" />



        </LinearLayout>


    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/botao_login_perfil">
    </com.google.android.gms.common.SignInButton>









</android.support.design.widget.CoordinatorLayout>