<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUsuarioActivity">
    <LinearLayout
        android:id="@+id/section_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp">
        
        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/imagem_perfil"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_perfil"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/nome_perfil"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_perfil"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/email_perfil"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_google"
                android:id="@+id/botao_logout_google"
                />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/botao_login_perfil"
        >
    </com.google.android.gms.common.SignInButton>

</LinearLayout>