<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview_musica_id"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    cardview:cardCornerRadius="4dp"
    android:background="@color/azulEscuro"
    android:focusable="true">

    <LinearLayout
        android:background="@drawable/edittext_arredondado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nome_musica_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorVermelho"
            android:textColor="@color/colorBranco"
            android:text="@string/nome_musica"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/nome_autor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorVermelho"
                android:gravity="center"
                android:text="@string/autor_musica"
                android:textColor="@color/colorBranco"
                android:textSize="21sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genero_musica_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorVermelho"
                    android:gravity="center"
                    android:text="@string/genero_musica"
                    android:textColor="@color/colorBranco"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>



    </LinearLayout>


</android.support.v7.widget.CardView>