<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview_evento_id"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    cardview:cardCornerRadius="4dp"
    android:background="@color/colorAccent"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBranco"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/local_evento"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"/>

            <TextView
                android:id="@+id/local_evento_id"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/local_evento"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:gravity="center"
                    android:text="@string/dia_evento"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dia_evento_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dia_evento"
                    android:textColor="@color/colorPrimary"
                    android:textSize="21sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/hora_inicio"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />
                <TextView
                    android:id="@+id/hora_inicio_evento_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/hora_inicio"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/hora_termino"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />
                <TextView
                    android:id="@+id/hora_termino_evento_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/hora_inicio"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />


            </LinearLayout>




        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>
